# Decentralized_University

./: COMPILATION_STATUS.md  Cargo.toml  LICENSE  README.md  deploy.sh  dfx.json  package-lock.json  package.json
src/: types.rs
src/certification_system/: Cargo.toml  certification_system.did
src/certification_system/src/: lib.rs
src/course_management/: Cargo.toml  course_management.did
src/course_management/src/: lib.rs  lib_complex.rs
src/decentralized_university_backend/: Cargo.toml
src/decentralized_university_frontend/: index.html  package.json
src/decentralized_university_frontend/src/: App.js  index.scss
src/governance/: Cargo.toml  governance.did
src/governance/src/: lib.rs
src/user_management/: Cargo.toml  user_management.did
src/user_management/src/: lib.rs
